--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arinyan</title>
+    <title></title>
 </head>
 <body>
     <p>I LOVE YOU</p>
-    <h1>Моя королева</h1>
+    <h1></h1>
 </body>
 </html>
